hphp/hack/test/typecheck/while_cond3.php.exp
File "while_cond3.php", line 18, characters 3-9:
Typing error (Typing[4110])
File "while_cond3.php", line 18, characters 3-4:
This is a num (int/float) because this is used in an arithmetic operation
File "while_cond3.php", line 15, characters 10-13:
It is incompatible with a nullable type
